Enhanced functionality for easier scrolling on dashlets with div overflow on touchscreen devices enabled on SugarFeeds but could not enable for jscharts because it interferes with mouseover and drilldowns bug 41530

--- a/sugarcrm/include/SugarCharts/Jit/css/base.css
+++ b/sugarcrm/include/SugarCharts/Jit/css/base.css
@@ -81,8 +81,8 @@ text-align: left;
     font-size:11px;
     font-family: Arial, Helvetica, sans-serif;
     padding:7px;
-	-moz-border-raduis: 6px;
-	-webkit-border-raduis: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
 	border-radius: 6px;
 
 }
